--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,12 +13,13 @@ futures = "0.3.21"
 toml = "0.5.9"
 lava_torrent = "0.7.0" # https://docs.rs/lava_torrent/0.7.0/lava_torrent/
 torznab = "0.7.2" # https://docs.rs/torznab/0.7.2/torznab/
-magnet-url = "2.0.0"
+magnet-url = { git = "https://github.com/SeanOMik/magnet-url-rs.git", branch = "main" }
 serde_with = "1.14.0"
 serde = { version = "1.0", features = ["derive"] }
 figment = { version = "0.10", features = ["toml", "env"] }
 wild = "2.0.4"
 argmap = "1.1.2"
+async-recursion = "1.0.0"
 
 reqwest = {version = "0.11", default_features = false, features = ["gzip", "json", "rustls-tls"]}
 urlencoding = "2.1.0"
