--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,11 +9,18 @@ edition = "2021"
 tokio = { version = "1.19.2", features = ["full"] }
 tracing = "0.1.35"
 tracing-subscriber = "0.3.11"
-futures = "0.3.21"
+futures = { version = "0.3.21", features= ["executor"] }
 toml = "0.5.9"
 lava_torrent = "0.7.0" # https://docs.rs/lava_torrent/0.7.0/lava_torrent/
 torznab = "0.7.2" # https://docs.rs/torznab/0.7.2/torznab/
+
+stopwatch = "0.0.7"
+
 magnet-url = { git = "https://github.com/SeanOMik/magnet-url-rs.git", branch = "main" }
+abstracttorrent = { path = "abstracttorrent" }
+#abstracttorrent = { git = "https://github.com/SeanOMik/abstracttorrent.git", branch = "main" }
+#qbittorrent = { git = "https://github.com/SeanOMik/qbittorrent-rs.git", branch = "main"}
+
 serde_with = "1.14.0"
 serde = { version = "1.0", features = ["derive"] }
 figment = { version = "0.10", features = ["toml", "env"] }
