--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
-/target
-.vscode
+**/target
+**/.vscode
 
 # Debug related directories that we don't want included
-/torrents*
-/output
-config.toml
+**/torrents*
+**/output
+**/config.toml
