Switch to using a yaml config

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
-**/target
-**/.vscode
+target
+.vscode
 
 # Debug related directories that we don't want included
-**/torrents*
-**/output
-**/config.toml
+dev
+config.yaml
