--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,7 @@ abstracttorrent = { path = "abstracttorrent" }
 
 serde_with = "1.14.0"
 serde = { version = "1.0", features = ["derive"] }
-figment = { version = "0.10", features = ["toml", "env"] }
+figment = { version = "0.10", features = ["yaml", "env"] }
 wild = "2.0.4"
 argmap = "1.1.2"
 async-recursion = "1.0.0"
